maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:28: error: recursive variable a needs type
	var a = a
                ^